<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.bekoenig.trymigrate</groupId>
    <artifactId>trymigrate</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>trymigrate-core</module>
        <module>trymigrate-db2</module>
        <module>trymigrate-postgresql</module>
    </modules>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <junit-api.version>5.11.4</junit-api.version>
        <junit-platform.version>1.11.4</junit-platform.version>
        <junit-pioneer.version>2.3.0</junit-pioneer.version>

        <flyway.version>11.1.0</flyway.version>
        <schemacrawler.version>16.25.2</schemacrawler.version>
        <slf4j.version>2.0.16</slf4j.version>

        <assertj.version>3.27.0</assertj.version>
        <assertj-schemacrawler.version>1.0.7</assertj-schemacrawler.version>
        <jackson.version>2.18.2</jackson.version>
        <logback.version>1.5.15</logback.version>

        <testcontainers.version>1.20.4</testcontainers.version>
        <liquibase.version>4.30.0</liquibase.version>
        <mockito.version>5.14.0</mockito.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.fasterxml.jackson</groupId>
                <artifactId>jackson-bom</artifactId>
                <version>${jackson.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>

            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>${testcontainers.version}</version>
                <type>pom</type>
            </dependency>

            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-bom</artifactId>
                <version>${mockito.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Test-Abhängigkeiten -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>${logback.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit-pioneer</groupId>
            <artifactId>junit-pioneer</artifactId>
            <version>${junit-pioneer.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>